@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/libusb-0.1.12-r5.ebuild,v 1.2 2009/03/28 11:30:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/libusb-0.1.12-r5.ebuild,v 1.3 2009/05/15 10:55:18 robbat2 Exp $
 
 inherit eutils libtool autotools toolchain-funcs
 
@@ -14,8 +14,9 @@ KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE="debug doc nocxx"
 RESTRICT="test"
 
-RDEPEND=""
-DEPEND="doc? ( app-text/openjade
+RDEPEND="!dev-libs/libusb-compat"
+DEPEND="${RDEPEND}
+	doc? ( app-text/openjade
 	app-text/docbook-dsssl-stylesheets
 	app-text/docbook-sgml-utils
 	~app-text/docbook-sgml-dtd-4.2 )"
